--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.10.1",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.1",
     "sass": "^1.63.6"
   },
