--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6"
   },
