--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.63.6"
   },
   "devDependencies": {
+    "@rollup/plugin-dynamic-import-vars": "^2.0.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
