--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "sass": "^1.63.6"
   },
   "devDependencies": {
-    "@rollup/plugin-dynamic-import-vars": "^2.0.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
