--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0",
+    "emailjs-com": "^3.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -19,7 +21,8 @@
     "react-icons": "^4.10.1",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
