--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
     "vite": "^4.3.9"
   }
