--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yoga-and-meditation",
   "private": true,
   "version": "0.0.0",
+  "main": "main.jsx",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
