--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
