--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.10.1",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
+    "react-use-cart": "^1.13.0",
     "sass": "^1.63.6",
     "validator": "^13.11.0"
   },
