--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0",
+    "context": "^3.0.12",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.3.0",
     "prop-types": "^15.8.1",
