--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
+    "react-scroll": "^1.8.9",
     "sass": "^1.63.6",
     "validator": "^13.11.0"
   },
@@ -33,10 +34,6 @@
     "@vitejs/plugin-react": "^4.0.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.15",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
     "vite": "^4.3.9"
