--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2",
+    "react-scroll": "^1.8.9",
     "sass": "^1.63.6",
     "validator": "^13.11.0"
   },
